@@ -19,8 +19,6 @@ package org.openqa.selenium.devtools.v116;
 
 import static java.net.HttpURLConnection.HTTP_OK;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.io.ByteStreams;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
@@ -72,7 +70,7 @@ public class v116Network extends Network<AuthRequired, RequestPaused> {
   protected Command<Void> enableFetchForAllPatterns() {
     return Fetch.enable(
         Optional.of(
-            ImmutableList.of(
+            List.of(
                 new RequestPattern(
                     Optional.of("*"), Optional.empty(), Optional.of(RequestStage.REQUEST)),
                 new RequestPattern(
@@ -188,7 +186,7 @@ public class v116Network extends Network<AuthRequired, RequestPaused> {
   protected Command<Void> continueRequest(RequestPaused pausedReq, HttpRequest req) {
     ByteArrayOutputStream bos = new ByteArrayOutputStream();
     try (InputStream is = req.getContent().get()) {
-      ByteStreams.copy(is, bos);
+      is.transferTo(bos);
     } catch (IOException e) {
       return continueWithoutModification(pausedReq);
     }
@@ -198,7 +196,7 @@ public class v116Network extends Network<AuthRequired, RequestPaused> {
 
     return Fetch.continueRequest(
         pausedReq.getRequestId(),
-        Optional.empty(),
+        Optional.of(req.getUri()),
         Optional.of(req.getMethod().toString()),
         Optional.of(Base64.getEncoder().encodeToString(bos.toByteArray())),
         Optional.of(headers),
@@ -212,7 +210,7 @@ public class v116Network extends Network<AuthRequired, RequestPaused> {
 
     ByteArrayOutputStream bos = new ByteArrayOutputStream();
     try (InputStream is = res.getContent().get()) {
-      ByteStreams.copy(is, bos);
+      is.transferTo(bos);
     } catch (IOException e) {
       bos.reset();
     }
