@@ -20,7 +20,6 @@ package org.openqa.selenium.firefox;
 import static org.openqa.selenium.remote.Browser.FIREFOX;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
@@ -40,7 +39,7 @@ public class AddHasFullPageScreenshot<X>
   public static final String FULL_PAGE_SCREENSHOT = "fullPageScreenshot";
 
   private static final Map<String, CommandInfo> COMMANDS =
-      ImmutableMap.of(
+      Map.of(
           FULL_PAGE_SCREENSHOT,
           new CommandInfo("/session/:sessionId/moz/screenshot/full", HttpMethod.GET));
 
